# anonfile

./: .gitignore  .travis.yml  CMakeLists.txt  README.MD  build.sh  constants.h  main.cpp  shell_integration.bat
helpers/: helpers.cpp  helpers.h
json_handler/: JHandler.cpp  JHandler.h
pjson/: pjson.h
sendReceiver/: sendReceiver.cpp  sendReceiver.h
